# DawnStar

./: .gitignore  .gitmodules  DawnStar.sln  README.md  premake5.lua
DawnStar/: CMakeLists.txt  DawnStar.vcxproj  DawnStar.vcxproj.filters  premake5.lua
DawnStar/DawnStar/: DawnStar.hpp  dspch.cpp  dspch.hpp
DawnStar/DawnStar/Core/: Application.cpp  Application.hpp  AssetManager.cpp  AssetManager.hpp  Core.hpp  Filesystem.cpp  Filesystem.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseButtonCodes.hpp  MouseCodes.hpp  PlatformDetection.hpp  Timestep.hpp  Types.hpp  UUID.cpp  UUID.hpp  Window.cpp  Window.hpp
DawnStar/DawnStar/Debug/: ObjectListPanel.cpp  ObjectListPanel.hpp  Profiler.hpp  RenderStatPanel.cpp  RenderStatPanel.hpp
DawnStar/DawnStar/Events/: Event.hpp  KeyEvent.hpp  MouseEvent.hpp
DawnStar/DawnStar/Game/: Utils.cpp  Utils.hpp  World.cpp  World.hpp
DawnStar/DawnStar/Game/UI/: UIContents.cpp  UIContents.hpp  UISystem.cpp  UISystem.hpp
DawnStar/DawnStar/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuiUI.cpp  ImGuiUI.hpp
DawnStar/DawnStar/Renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Font.cpp  Font.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Material.cpp  Mesh.cpp  Mesh.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
DawnStar/DawnStar/Scene/: Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  ScriptableEntity.hpp  SystemBase.hpp
DawnStar/src/: DawnStar.hpp  dspch.cpp  dspch.hpp
DawnStar/src/DawnStar/Core/: Application.cpp  Application.hpp  Buffer.hpp  EntryPoint.hpp  Filesystem.cpp  Input.cpp  KeyCodes.hpp  Layer.hpp  Log.cpp  Log.hpp  MouseCodes.hpp  Timestep.hpp  UUID.cpp  UUID.hpp  Window.hpp
DawnStar/src/DawnStar/Events/: ApplicationEvent.hpp  Event.hpp
DawnStar/src/DawnStar/Game/: Utils.cpp
DawnStar/src/DawnStar/Game/UI/: UIContents.cpp  UISystem.cpp
DawnStar/src/DawnStar/ImGui/: ImGuiLayer.cpp  ImGuiUI.cpp  ImGuiUI.hpp
DawnStar/src/DawnStar/Renderer/: Buffer.cpp  Camera.cpp  Font.cpp  Font.hpp  FrameBuffer.cpp  GraphicsContext.hpp  Material.hpp  Mesh.cpp  RenderCommand.cpp  RenderCommand.hpp  RenderGraphData.hpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp  Renderer3D.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp
DawnStar/src/DawnStar/Scene/: Components.hpp  Entity.cpp  Scene.cpp  Scene.hpp  SystemBase.hpp
DawnStar/src/DawnStar/Utils/: StringUtils.hpp
Example/: Example.vcxproj  Example.vcxproj.filters  imgui.ini  premake5.lua
Example/assets/shaders/: Bloom.glsl  Cubemap.glsl  DepthShader.glsl  FXAA.glsl  GaussianBlur.glsl  HDR.glsl  LightingPass.glsl  PBR.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl  Renderer2D_Text.glsl
Example/src/: ExampleApp.cpp
Example/src/BasicExample/: ExampleLayer.cpp  ExampleLayer.hpp  TestSystem.cpp  TestSystem.hpp
Example/src/Example3D/: ExampleLayer.cpp  ExampleLayer.hpp
Example/src/UIExample/: ExampleLayer.cpp  ExampleLayer.hpp
example/: CMakeLists.txt  imgui.ini  simple_build.sh
example/assets/shaders/: Renderer2D_Text.glsl  Texture.glsl
example/src/: ExampleApp.cpp  TestLayer.cpp  TestLayer.hpp  TestScript.cpp  TestScript.hpp
example/src/BasicExample/: ExampleLayer.cpp  ExampleLayer.hpp  TestScript.cpp  TestScript.hpp  TestSystem.cpp  (+1 more)
ldrail/: CMakeLists.txt
sandbox/: CMakeLists.txt
sandbox/src/: Editor.cpp  Editor.hpp  SandboxApp.cpp
scripts/: Win_GenProjects.bat
(+2 files in other folders)
